Fix T40111: replaceMesh() crashes BGE when used on a parented object

The replace mesh code was still calling release() on the parent object when it
no longer needed to (due to earlier commits).